--- a/src/components/Board.css
+++ b/src/components/Board.css
@@ -1,10 +1,11 @@
+@import url(https://fonts.googleapis.com/css?family=Bangers);
+
 .board {
   flex: 1;
   display: flex;
   justify-content: center;
   flex-flow: column;
   align-items: center;
-  font-family: sans-serif;
 }
 
 .board .score-board {
@@ -15,6 +16,16 @@
   align-items: center;
 }
 
+.board .score {
+  display: flex;
+  flex-flow: column;
+  margin: 0 20px;
+}
+
+.board .score .points {
+  font-size: 60px;
+}
+
 .board .restart-button {
   border: none;
   background-color: #09d3ac;
@@ -23,6 +34,7 @@
   color: white;
   font-weight: 700;
   font-size: 16px;
+  cursor: pointer;
 }
 
 .board .game-board {
@@ -30,9 +42,22 @@
   flex: 1;
 }
 
+.board .game-board.won {
+  filter: blur(3px);
+}
+
 .board .won-message {
   position: absolute;
-  color: red;
-  font-size: 60px;
-  font-weight: 900;
+  text-align: center;
+  font-weight: normal;
+  color: #e8870e;
+  text-transform: uppercase;
+  font-size: 8em;
+  white-space: nowrap;
+  font-size: 12vw;
+  z-index: 1000;
+  font-family: 'Bangers', cursive;
+  text-shadow: 5px 5px 0 rgba(0, 0, 0, 0.7);
+  transform: skew(0, -6deg);
 }
+
