--- a/src/components/Board.css
+++ b/src/components/Board.css
@@ -16,17 +16,17 @@
   align-items: center;
 }
 
-.board .score {
+.board .score-board .score {
   display: flex;
   flex-flow: column;
   margin: 0 20px;
 }
 
-.board .score .points {
+.board .score-board .score .points {
   font-size: 60px;
 }
 
-.board .restart-button {
+.board .score-board .restart-button {
   border: none;
   background-color: #09d3ac;
   padding: 10px 15px;
@@ -35,11 +35,14 @@
   font-weight: 700;
   font-size: 16px;
   cursor: pointer;
+  outline: none;
 }
 
 .board .game-board {
   width: 700px;
-  flex: 1;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .board .game-board.won {
@@ -52,7 +55,6 @@
   font-weight: normal;
   color: #e8870e;
   text-transform: uppercase;
-  font-size: 8em;
   white-space: nowrap;
   font-size: 12vw;
   z-index: 1000;
